<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="br.com.lvbfontes.imobiliaria.TelaCadastro"
    android:orientation="vertical">

    <TextView
        style="@style/FiltroCabecalho"
        android:paddingTop="30dp"
        android:text="@string/txtTelaCadastro"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintNome"/>

    <EditText
        android:id="@+id/edtSobrenome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintSobrenome"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtSenha"
        android:inputType="textVisiblePassword" />

    <EditText
        android:id="@+id/edtRepeteSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintRepeteSenha"
        android:inputType="textVisiblePassword"/>

    <Button
        android:id="@+id/btnConfirmaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConfirmaCadastro"
        android:layout_marginTop="16dp"/>

</LinearLayout>
