<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context="br.com.lvbfontes.imobiliaria.TelaIdiomas">

    <TextView
        style="@style/FiltroCabecalho"
        android:paddingTop="32dp"
        android:text="@string/txtTelaIdiomas"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnPortugues"
        android:onClick="idiomaPT"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnIngles"
        android:onClick="idiomaEN"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEspanhol"
        android:onClick="idiomaES"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnFrances"
        android:onClick="idiomaFR"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorAccent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:onClick="voltar"/>

</LinearLayout>
