<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="br.com.lvbfontes.imobiliaria.TelaFiltroContrato">

    <TextView
        style="@style/FiltroCabecalho"
        android:paddingTop="100dp"
        android:text="@string/txtTelaFiltroContrato"/>

    <Button
        android:id="@+id/btnAluguel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:text="@string/btnAluguel"/>

    <Button
        android:id="@+id/btnCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="@string/btnCompra"/>

</LinearLayout>
